收藏bug修复