@@ -3,15 +3,19 @@ package com.aftvc.top.controller;
 
 import com.aftvc.top.annotation.Log;
 import com.aftvc.top.domain.Collect;
+import com.aftvc.top.domain.Consumer;
 import com.aftvc.top.domain.ResponseBean;
+import com.aftvc.top.service.ConsumerService;
 import com.aftvc.top.service.impl.CollectServiceImpl;
 import jdk.nashorn.internal.objects.annotations.Getter;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpRequest;
 import org.springframework.web.bind.annotation.*;
 
+import javax.annotation.Resource;
 import javax.servlet.http.HttpServletRequest;
 import java.util.Date;
+import java.util.Objects;
 
 /**
  * <p>
@@ -26,6 +30,9 @@ public class CollectController {
 
     @Autowired
     private CollectServiceImpl collectService;
+
+    @Resource
+    private ConsumerService consumerService;
 
     /**
      *  返回所有用户收藏列表
@@ -48,44 +55,38 @@ public class CollectController {
 
     /**
      * 增加收藏列表
-     * @param user_id
-     * @param type
-     * @param song_id
      * @return
      */
     @PostMapping("/collection/add")
-    public ResponseBean addCollection(@RequestParam("userId")String user_id, @RequestParam("type")String type, @RequestParam("songId")String song_id, HttpServletRequest request){
+    public ResponseBean addCollection(@RequestParam("userId")String userId, @RequestParam("type")String type, @RequestParam("songId")String songId){
         ResponseBean responseBean = new ResponseBean();
         Collect collect = new Collect();
-        String song_list_id=request.getParameter("songListId");
-        System.out.println(1);
-        if (song_id == ""){
+        Consumer exitConsumer = consumerService.getById(userId);
+        //收藏
+        //查询是否存在
+        Collect collectExit=collectService.selectCollection(userId,songId);
+        //userId 和 songId只要一个为空 返回空
+        if(null ==exitConsumer){
+            responseBean.setCode(0);
+            responseBean.setMsg("用户不存在");
+        }
+        if(songId ==null || "".equals(songId)){
             responseBean.setCode(0);
             responseBean.setMsg("收藏歌曲为空");
-            System.out.println("收藏歌曲为空");
-        }else if (collectService.existSongId(Integer.parseInt(user_id), Integer.parseInt(song_id))){
+        }else if(collectExit!=null){//删除收藏
+            collectService.deleteCollect(Integer.parseInt(userId),Integer.parseInt(songId));
             responseBean.setCode(2);
-            responseBean.setMsg("已收藏");
-            System.out.println("已收藏");
-        }
-        collect.setUserId(Integer.parseInt(user_id));
-        collect.setType(new Byte(type));
-
-        if (new Byte(type) == 0) {
-            collect.setSongId(Integer.parseInt(song_id));
-        } else if (new Byte(type) == 1) {
-            collect.setSongListId(Integer.parseInt(song_list_id));
-        }
-
-        collect.setCreateTime(new Date());
-        boolean res = collectService.addCollection(collect);
-        if(res){
+            responseBean.setMsg("取消收藏");
+        }else{//添加收藏
+            collect.setSongId(Integer.parseInt(songId));
+            collect.setType(Byte.valueOf(type));
+            collect.setUserId(Integer.parseInt(userId));
+            collect.setCreateTime(new Date());
+            responseBean.setMsg("收藏歌曲成功");
             responseBean.setCode(1);
-            responseBean.setMsg("收藏成功");
-        }else{
-            responseBean.setCode(0);
-            responseBean.setMsg("收藏失败");
+            collectService.save(collect);
         }
+
         return responseBean;
     }
 
